--- a/src/Component/Calculator/Calculator.css
+++ b/src/Component/Calculator/Calculator.css
@@ -1,7 +1,7 @@
  .calculator {
     position: relative;
-    left: 400px;
-    top:-120px;
+    left: auto;
+    top:-70px;
     width: 100%;
     max-width: 400px;
     border-radius: 16px;
