--- a/src/Component/Calculator/Calculator.css
+++ b/src/Component/Calculator/Calculator.css
@@ -1,7 +1,7 @@
  .calculator {
     position: relative;
     left: auto;
-    top:-10px;
+    top:30px;
     width: 100%;
     max-width: 400px;
     border-radius: 16px;
@@ -59,5 +59,10 @@
     flex: 1 1 33.333%;
     max-width: 33.333%;
     background-color: rgb(78, 76, 76);
+  }
+  .container {
+    background-color: rgb(235, 224, 224);
+    height: 100vh;
+
   }
   
