--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,6 +1,3 @@
-/* #logo-letter {
-    padding-left: 5px;
-    padding-right: 5px;
-    background-color: grey;
-    color: white;
-} */
+nav {
+    background-color: rgb(228, 142, 142);
+}
