edit todo component

--- a/src/Component/Todo/Todo.css
+++ b/src/Component/Todo/Todo.css
@@ -1,9 +1,13 @@
 #todo-card {
     align-items: center;
     width: 400px;
-    height: 400px;
+    min-height: 100%;
     background-color: rgb(222, 222, 168);
     border-radius: 25px;
+}
+
+#todo-container {
+    min-height: 100%;
 }
 
 h2 {
