--- a/src/Component/Todo/Todo.css
+++ b/src/Component/Todo/Todo.css
@@ -4,10 +4,12 @@
     min-height: 100%;
     background-color: rgb(222, 222, 168);
     border-radius: 25px;
+    margin-bottom: 50px;
 }
 
 #todo-container {
     min-height: 100%;
+    padding-bottom: 200px;
 }
 
 h2 {
