--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -9,6 +9,8 @@
     left: 0;
     width: 100%;
   }
-  .spam {
-    color: white;
+  .footer a {
+   text-decoration: none;
+   padding-right: 20px;
+   color: grey;
   }
