--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -1,3 +1,24 @@
-.blog {
+#welcome {
     height: 100vh;
+}
+
+h1 {
+    font-size: 70px;
+    color: grey;
+    font-family: s;
+    
+}
+#card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 200px;
+    top: 60px;
+    background-color: rgb(222, 222, 168);
+}
+
+#card p {
+    font-size: 30px;
+    color:grey;
 }
