fixed header position

--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,11 +1,17 @@
 #welcome {
-    height: 100vh;
+    height: 150vh;
+}
+
+#welcome h1 {
+
+    padding-top: 150px;
 }
 
 h1 {
     font-size: 70px;
     color: grey;
     font-family: s;
+
     
 }
 #card {
