--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -2,10 +2,15 @@
     height: 100vh;
 }
 
+#welcome h1 {
+padding-top: 150px;
+}
+
 h1 {
     font-size: 70px;
     color: grey;
     font-family: s;
+    padding-top: 150px;
     
 }
 #card {
