--- a/src/Component/Calculator/Calculator.css
+++ b/src/Component/Calculator/Calculator.css
@@ -1,72 +1,64 @@
- .calculator {
-    position: relative;
-    left: auto;
-    top:10px;
-    width: 100%;
-    max-width: 400px;
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0px 2px 64px rgba(0, 0, 0, 0.2);
-  }
-
-  
-  .display {
-    padding: 16px;
-    text-align: right;
-    background-color:rgb(222, 222, 168);
-    color: black;
-    font-size: 24px;
-    font-weight: 300;
-  }
-  
-  .display span {
-    font-size: 16px;
-    color: rgb(251, 79, 79);
-    margin-right: 10px;
-  }
-  
-  button {
-    appearance: none;
-    border: none;
-    outline: none;
-    color: black;
-    font-size: 20px;
-    padding: 16px;
-    cursor: pointer;
-    transition: 0.4s;
-  }
-  
-  button:hover {
-    opacity: 0.9;
-  }
-  
-  .operators {
-    display: flex;
-  }
-  
-  .operators button {
-    flex: 1 1 0%;
-    background-color: grey;
-    color: white;
-    font-weight: 700;
-    border: solid 1px rgb(78, 76, 76);
-  }
-  
+.calculator {
+  position: relative;
+  left: auto;
+  top:-20px;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0px 2px 64px rgba(0, 0, 0, 0.2);
+}
+.display {
+  padding: 16px;
+  text-align: right;
+  background-color:rgb(222, 222, 168);
+  color: black;
+  font-size: 24px;
+  font-weight: 300;
+}
+.display span {
+  font-size: 16px;
+  color: rgb(251, 79, 79);
+  margin-right: 10px;
+}
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  color: black;
+  font-size: 20px;
+  padding: 16px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+button:hover {
+  opacity: 0.9;
+}
+.operators {
+  display: flex;
+}
+.operators button {
+  flex: 1 1 0%;
+  background-color: grey;
+  color: white;
+  font-weight: 700;
+  border: solid 1px rgb(78, 76, 76);
+}
   .digits {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .digits button {
-    flex: 1 1 33.333%;
-    max-width: 33.333%;
-    background-color: rgb(222, 222, 168);
-  }
-  .container {
-    background-color: rgb(235, 224, 224);
-  }
-
-  #calc {
-    height: 100vh;
-  }
+  display: flex;
+  flex-wrap: wrap;
+}
+.digits button {
+  flex: 1 1 33.333%;
+  max-width: 33.333%;
+  background-color: rgb(222, 222, 168);
+  border: 2px solid gray;
+  border-radius: 15px;
+}
+.container {
+  background-color: rgb(235, 224, 224);
+}
+#calc {
+  min-height: 120vh;
+}
   
