edit components css

--- a/src/Component/Calculator/Calculator.css
+++ b/src/Component/Calculator/Calculator.css
@@ -44,7 +44,8 @@ button:hover {
   font-weight: 700;
   border: solid 1px rgb(78, 76, 76);
 }
-  .digits {
+.digits {
+  background-color: grey;
   display: flex;
   flex-wrap: wrap;
 }
